# optd-experimental

./: .gitignore  Cargo.toml  README.md
optd-cost-model/: Cargo.toml
optd-cost-model-perf/: Cargo.toml
optd-cost-model-perf/src/: dbms.rs  lib.rs  main.rs  tpch.rs  tpch_q6.rs
optd-cost-model-perf/src/tpch/: mod.rs  q2.rs  q6.rs  q7.rs  q8.rs  q9.rs
optd-cost-model/src/: cost_model.rs  lib.rs  memo_ext.rs  storage.rs  test_utils.rs  utils.rs
optd-cost-model/src/common/: mod.rs  nodes.rs  types.rs  values.rs
optd-cost-model/src/cost/: agg.rs  filter.rs  join.rs  limit.rs  mod.rs  stats.rs
optd-cost-model/src/stats/: arith_encoder.rs  counter.rs  mod.rs  tdigest.rs
optd-cost-model/src/storage/: mock.rs  mod.rs  persistent.rs
optd-mvp/: Cargo.toml  DESIGN.md  README.md  entities.md
optd-mvp/benches/: memo.rs
optd-mvp/src/: lib.rs
optd-mvp/src/entities/: cascades_group.rs  fingerprint.rs  group.rs  logical_children.rs  logical_expression.rs  mod.rs  physical_children.rs  physical_expression.rs  prelude.rs
optd-mvp/src/expression/: logical_expression.rs  mod.rs  physical_expression.rs
optd-mvp/src/memo/: interface.rs  mod.rs  persistent.rs
optd-mvp/src/migrator/: mod.rs
optd-persistent/: Cargo.toml  README.md  init.db  memory.db
optd-persistent/migration/src/: lib.rs  m20241026_000001_create_tables.rs
optd-persistent/src/: cost_model_orm_manager_impl.rs  cost_model_storage_layer.rs  lib.rs  main.rs  memo_orm_manager_impl.rs  memo_storage_layer.rs  memo_table.rs  orm_manager.rs  storage_layer.rs
optd-persistent/src/cost_model/: interface.rs  mod.rs  orm.rs
optd-persistent/src/db/: init.db
optd-persistent/src/entities/: attribute.rs  attribute_constraint_junction.rs  attribute_foreign_constraint_junction.rs  attribute_stat.rs  attribute_statistic.rs  attribute_statistic_to_attribute_junction.rs  attribute_stats_junction.rs  cascades_group.rs  column.rs  column_constraint_junction.rs  column_foreign_constraint_junction.rs  column_statistic.rs  column_statistic_to_column_junction.rs  constraint.rs  constraint_attribute_junction.rs  constraint_metadata.rs  cost.rs  database_metadata.rs  event.rs  fingerprint.rs  foreign_constraint_ref_attribute_junction.rs  group.rs  group_winner.rs  index.rs  index_metadata.rs  logical_children.rs  logical_children_junction.rs  logical_expression.rs  logical_group_junction.rs  logical_property.rs  mod.rs  namespace_metadata.rs  namespace_schema.rs  physical_children.rs  physical_children_junction.rs  physical_expression.rs  physical_expression_to_statistic_junction.rs  physical_group_junction.rs  physical_property.rs  plan_cost.rs  (+11 more)
optd-persistent/src/memo/: expression.rs  interface.rs  mod.rs  orm.rs
optd-persistent/src/migrator/: m20241026_000001_create_cascades_group_table.rs  m20241026_000001_create_logical_expression_table.rs  m20241026_000001_create_logical_group_junction_table.rs  m20241026_000001_create_logical_property_table.rs  m20241026_000001_create_physical_expression_table.rs  m20241026_000001_create_physical_group_junction_table.rs  m20241026_000001_create_physical_property_table.rs  m20241029_000001_attribute_stat.rs  m20241029_000001_attribute_stats_junction.rs  m20241029_000001_cascades_group.rs  m20241029_000001_constraint.rs  m20241029_000001_constraint_attribute_junction.rs  m20241029_000001_cost.rs  m20241029_000001_database_metadata.rs  m20241029_000001_event.rs  m20241029_000001_foreign_constraint_ref_attribute_junction.rs  m20241029_000001_group_winner.rs  m20241029_000001_index.rs  m20241029_000001_logical_expression.rs  m20241029_000001_logical_group_junction.rs  m20241029_000001_logical_property.rs  m20241029_000001_namespace_metadata.rs  m20241029_000001_namespace_schema.rs  m20241029_000001_physical_expression.rs  m20241029_000001_physical_group_junction.rs  m20241029_000001_physical_property.rs  m20241029_000001_table_attribute.rs  mod.rs  (+2 more)
(+114 files in other folders)
