[package]
name = "optd-cost-model-perf"
version = "0.1.0"
edition = "2021"

[dependencies]
optd-cost-model = { path = "../optd-cost-model", features = ["include-tests"] }
optd-persistent = { path = "../optd-persistent" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
datafusion-expr = "32.0.0"
csv2parquet = { git = "https://github.com/wangpatrick57/arrow-tools.git", branch = "main" }
log = "0.4"
datafusion = { version = "32.0.0", features = [
    "avro",
    "crypto_expressions",
    "encoding_expressions",
    "regex_expressions",
    "unicode_expressions",
    "compression",
] }
shlex = "1.3"
ordered-float = "4.0"
tokio = { version = "1.0.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
rayon = "1.10"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11"