[package]
name = "optd-cost-model"
version = "0.1.0"
edition = "2021"
authors = ["Yuanxin Cao", "Lan Lou", "Kunle Li"]

[dependencies]
optd-persistent = { path = "../optd-persistent", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.7.0", features = ["json"] }
arrow-schema = "53.2.0"
datafusion-expr = "32.0.0"
datafusion = "32.0.0"
ordered-float = "4.0"
chrono = "0.4"
itertools = "0.13"
assert_approx_eq = "1.1.0"
trait-variant = "0.1.2"

[dev-dependencies]
crossbeam = "0.8"
rand = "0.8"
