[package]
name = "optd-persistent"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
sea-orm = { version = "1.1.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
sea-orm-macros = "1.1.0"
sea-orm-migration = "1.1.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.41.0", features = ["full"] }


