[package]
name = "optd-persistent"
version = "0.1.0"
edition = "2021"
authors = ["Sarvesh Tandon", "Connor Tsui"]

[dependencies]
sea-orm = { version = "1.1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
    "with-json",
] }
sea-orm-migration = "1.0.0"
serde_json = "1.0.118" # Hash implementation on serde_json::Value
tokio = { version = "1.0.1", features = ["macros", "rt-multi-thread"] }
trait-variant = "0.1.2"

# Pin more recent versions for -Zminimal-versions
async-trait = "0.1.43"
async-stream = "0.3.1"
strum = "0.26.1"
